--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,7 @@
     padding: 0 19px;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
 }
 
 .modal__container {
@@ -24,6 +25,7 @@
 
 .modal__opened {
     display: flex;
+    visibility: visible;
     }
 
 .modal__heading {
